# Router/router.go
@@ -12,7 +12,9 @@ func SetupRouter() *mux.Router {
 	router := mux.NewRouter()
 	// routes
 	router.HandleFunc("/login", controllers.CreateEndpoint).Methods("POST")
-	router.HandleFunc("/agent/{id}", controllers.GetByIdEndpoint).Methods("GET")
-	router.HandleFunc("/agent", controllers.GetAgentEndpoint).Methods("GET")
+	router.HandleFunc("/frontUser", controllers.GetAllFrontUsersEndpoint).Methods("GET")
+	router.HandleFunc("/frontUser/{id}", controllers.GetFrontUsersByIdEndpoint).Methods("GET")
+	router.HandleFunc("/passenger", controllers.GetAllPassengersEndpoint).Methods("GET")
+	router.HandleFunc("/companies", controllers.GetAllCompaniesEndpoint).Methods("GET")
 	return router
 }
